# running-route-planner

./: .env.example  .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: pages.yml
client/: .eslintrc.cjs  package.json  vite.config.ts
client/src/: config.ts  elevation.ts  geocoding.ts  main.ts  types.ts  utils.ts
client/src/app/: bootstrap.ts  dom.ts  (+4 more)
server/: .env.example  alembic.ini  pyproject.toml  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 20241013_0001_initial_schema.py
server/app/: app.py  crud.py  db.py  schemas.py
server/app/core/: config.py  security.py
server/app/repositories/: route_repository.py
server/app/routers/: auth.py  me.py  routes.py
server/app/services/: route_service.py  strava.py
server/tests/: test_route_service.py
src/: analytics.ts  api.ts  config.ts  controls.ts  elevation.ts  geocoding.ts  gpx.ts  gpxManager.ts  keyboardShortcuts.ts  main.ts  route.ts  routesApi.ts  routing.ts  state.ts  style.css  types.ts  userPanel.ts  utils.ts
src/app/: bootstrap.ts  eventHandlers.ts  keyboardShortcuts.ts  panels.ts
src/config/: api.ts  geolocation.ts  routing.ts  storage.ts  ui.ts
src/css/: panels.css  style.css
src/map/: initializeMap.ts
src/panels/: explorePanel.ts  myRoutesPanel.ts  saveRoutePanel.ts  searchPanel.ts  settingsPanel.ts  userPanel.ts
src/routing/: routeManager.ts  routingService.ts
src/services/: analytics.ts  api.ts  routes.ts
src/state/: index.ts
src/storage/: gpx.ts  gpxManager.ts
(+27 files in other folders)
