[project]
name = "running-route-planner-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.2",
    "httpx==0.27.2",
    "itsdangerous==2.2.0",
    "psycopg[binary]==3.2.1",
    "python-dotenv>=1.1.1",
    "pydantic-settings==2.5.2",
    "sqlalchemy==2.0.35",
    "uvicorn==0.30.6",
    "alembic==1.13.2",
]

[dependency-groups]
dev = [
    "uvicorn[standard]==0.30.6",
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
